Remove deprecation warnings in java
All warnings come from the same problem:
warning: [deprecation] newInstance() in Class has been deprecated
                        GUIIntElement guiIntElement = (GUIIntElement)c.newInstance();

we switch to (GUIIntElement)c.getDeclaredConstructor().newInstance();